AbstractEquipment "cursed" & "identified" flag rolls now depend on player's luck
* Chance to add items from a random ItemCategory  to dungeon floor based on player's luck
* New item quantity cap system when rolling from ItemCategoryLists